source/blender/blenkernel/intern/appdir.cc
@@ -1121,7 +1121,7 @@ static void where_is_temp(char *tempdir, const size_t tempdir_maxncpy, const cha
 
   tempdir[0] = '\0';
 
-  if (userdir && userdir[0] != '\0' && BLI_is_dir(userdir)) {
+  if (userdir && userdir[0] != '\0' && BLI_is_dir(userdir) && !BLI_path_is_rel(userdir)) {
     BLI_strncpy(tempdir, userdir, tempdir_maxncpy);
     /* Add a trailing slash if needed. */
     BLI_path_slash_ensure(tempdir, tempdir_maxncpy);
